go shopping function and class